# cpk-lib-python-aws

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  pyproject.toml
.github/workflows/: precommit.yaml  tests.yaml
cpk_lib_python_aws/: __init__.py
cpk_lib_python_aws/aws_access_auditor/: README.md  __init__.py  __main__.py  auditor.py  aws_client_manager.py  cli.py  config.py  exceptions.py  utils.py
cpk_lib_python_aws/aws_sso_auditor/: README.md  __init__.py  __main__.py  auditor.py  aws_client_manager.py  cli.py  config.py  exceptions.py  formatters.py  utils.py
cpk_lib_python_aws/shared/: __init__.py  aws_base.py  exceptions.py  output_sink.py  utils.py
cpk_lib_python_aws/tests/aws_access_auditor/: test_auditor.py  test_cli.py  test_config.py
cpk_lib_python_aws/tests/aws_sso_auditor/: test_auditor.py  test_cli.py  test_config.py
